---
source: archetect_templating/tests/test_parser.rs
description: "{{ \"foo\\u2603bar\" }}"
input_file: archetect_templating/tests/parser-inputs/string_unescape.txt
---
Ok(
    Template {
        children: [
            EmitExpr {
                expr: Const {
                    value: "foo☃bar",
                } @ 1:3-1:17,
            } @ 1:0-1:17,
        ],
    } @ 0:0-1:20,
)
